--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-icons": "^4.3.1",
         "react-infinite-scroll-component": "^6.1.0",
         "react-loading-skeleton": "^3.1.0",
+        "react-paginate": "^8.1.4",
         "react-responsive": "^9.0.0-beta.10",
         "react-select": "^5.4.0",
         "react-slick": "^0.29.0",
