--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@reach/combobox": "^0.17.0",
         "@react-google-maps/api": "^2.12.1",
         "classnames": "^2.3.1",
+        "draft-js": "^0.11.7",
         "flickity": "^2.3.0",
         "formik": "^2.2.9",
         "iron-session": "^6.1.3",
@@ -29,6 +30,7 @@
         "react-calendar": "^3.7.0",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "17.0.2",
+        "react-draft-wysiwyg": "^1.15.0",
         "react-flickity-component": "^3.6.2",
         "react-icons": "^4.3.1",
         "react-infinite-scroll-component": "^6.1.0",
