--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-responsive": "^9.0.0-beta.10",
         "react-select": "^5.4.0",
         "react-slick": "^0.29.0",
+        "react-switch": "^7.0.0",
         "react-zoom-pan-pinch": "^2.1.3",
         "rxjs": "^7.5.5",
         "slick-carousel": "^1.8.1",
