--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-calendar": "^3.7.0",
         "react-chartjs-2": "^5.2.0",
         "react-copy-to-clipboard": "^5.1.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "17.0.2",
         "react-flickity-component": "^3.6.2",
         "react-icons": "^4.3.1",
