--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-paginate": "^8.1.4",
         "react-quill": "^2.0.0",
         "react-responsive": "^9.0.0-beta.10",
+        "react-search-autocomplete": "^8.3.1",
         "react-select": "^5.4.0",
         "react-slick": "^0.29.0",
         "react-switch": "^7.0.0",
